v2.3.1
- checkbox and radio wer not working correctly with set_prePOST function
- default id creation in radio has to be stripped from html tags

v2.3.0
- added input type grid

v2.2.0
- added input type number

v2.1.2
- automatic id creation in radio function did not filter {}
- build in validation functions do not require a value anymore

v2.1.1
- missing translation for message
- missing label in bootstrap wrapper for input select

v2.1 
- another language file can be added
- error message can be translated
- submit and submit_bar values can be translated

v2.0
- the first release